--- a/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.html
+++ b/src/app/features/scoreboard/pages/admin/scoreboard-admin.component.html
@@ -77,6 +77,7 @@
             [playClock]="playClockWithPredictedValue()"
             [gameClockLocked]="gameClockLocked()"
             [playClockLocked]="playClockLocked()"
+            [supportsPlayClock]="scoreboard()?.has_playclock ?? true"
             (gameClockAction)="onGameClockAction($event)"
             (playClockAction)="onPlayClockAction($event)"
           />
