--- a/src/app/features/sports/components/list/sport-list.component.less
+++ b/src/app/features/sports/components/list/sport-list.component.less
@@ -14,6 +14,10 @@
     margin: 0;
   }
 
+  &__add-button {
+    white-space: nowrap;
+  }
+
   &__loading {
     display: flex;
     justify-content: center;
