feat(presets): add initial-time strategy display to list/detail views

--- a/src/app/features/sport-scoreboard-presets/components/list/sport-scoreboard-preset-list.component.html
+++ b/src/app/features/sport-scoreboard-presets/components/list/sport-scoreboard-preset-list.component.html
@@ -28,6 +28,7 @@
             <div class="preset-list__name">{{ preset.title }}</div>
             <div class="preset-list__meta">
               <span>Max Gameclock: {{ preset.gameclock_max ?? 'N/A' }}s</span>
+              <span>Init: {{ getInitialTimeLabel(preset.initial_time_mode, preset.initial_time_min_seconds) }}</span>
               <span>Direction: {{ preset.direction }}</span>
               <span>Stop: {{ preset.on_stop_behavior }}</span>
             </div>
